--- a/src/page/Ingredients/style.scss
+++ b/src/page/Ingredients/style.scss
@@ -2,3 +2,9 @@
   margin-left: 200px;
   margin-right: 300px;
 }
+
+.Pagination {
+  margin-top: 16px;
+  margin-left: 200px;
+  margin-right: 300px;
+}
